--- a/css/main.css
+++ b/css/main.css
@@ -302,13 +302,13 @@ img {
   height: auto;
 }
 
-.list, .address__list, .customers__list, .socials__list, .team__list, .affairs__list, .advances__list, .contacts, .nav__list {
+.list, .products__list, .button__list, .address__list, .customers__list, .socials__list, .team__list, .affairs__list, .advances__list, .contacts, .nav__list {
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-.linka, .adress__link {
+.linka, .products-link, .adress__link {
   text-decoration: none;
 }
 
@@ -345,7 +345,16 @@ body {
   border-bottom: 1px solid #ECECEC;
 }
 
+@media screen and (min-width: 768px) {
+  .logo__head {
+    display: none;
+  }
+}
+
 .logo {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: #000000;
   font-family: "Raleway";
   font-style: normal;
@@ -1062,42 +1071,34 @@ body {
   text-align: center;
 }
 
-.team__list {
-  margin-left: auto;
-  margin-right: auto;
-  width: 450px;
-}
 @media screen and (min-width: 768px) {
   .team__list {
-    width: 354px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
     gap: 30px;
-    -ms-flex-preferred-size: calc((100% - 60px) / 3);
-        flex-basis: calc((100% - 60px) / 3);
-  }
-}
-@media screen and (min-width: 1200px) {
-  .team__list {
-    width: 270px;
   }
 }
 
 .team__item {
+  width: 450px;
   margin-bottom: 30px;
   background: #FFFFFF;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+@media screen and (min-width: 768px) {
+  .team__item {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__item {
+    width: 270px;
+  }
 }
 
 .team__item:last-child {
@@ -1460,27 +1461,39 @@ color: var(--accent-color);
   right: 13%;
 }
 
-.section {
-  margin: 94px 0;
+.section__portfolio {
+  padding-top: 60px;
+  margin-bottom: 40px;
 }
 
-.imput {
-  display: block;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-bottom: 50px;
+.button__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 391px;
+  gap: 8px;
+  margin-bottom: 40px;
+}
+@media screen and (min-width: 768px) {
+  .button__list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 100%;
+  }
 }
 
-.item-works {
+.item__works {
   margin-right: 8px;
 }
 
-.item-works:last-child {
+.item__works:last-child {
   margin-right: 0;
 }
 
-.button-works {
+.button__works {
   display: inline-block;
   padding: 6px 25px;
   color: var(--title-text-color);
@@ -1521,33 +1534,41 @@ color: var(--accent-color);
   min-width: 130px;
 }
 
-.button-works:hover,
-.button-works:focus {
+.button__works:hover,
+.button__works:focus {
   color: var(--background-color);
   background-color: var(--accent-color);
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.imgs {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+.products__list {
+  margin-left: auto;
+  margin-right: auto;
+}
+@media screen and (min-width: 768px) {
+  .products__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 30px;
+  }
 }
 
-.products {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  gap: 30px;
+@media screen and (min-width: 768px) {
+  .products__item {
+    width: 354px;
+  }
+}
+
+.products__img {
+  width: 450px;
 }
 
 /* =====Overlay====== */
-.products-overl {
+.products__overl {
   position: relative;
   overflow: hidden;
 }
@@ -1576,8 +1597,8 @@ color: var(--accent-color);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.products-link:hover .overlay,
-.products-link:focus .overlay {
+.products__link:hover .overlay,
+.products__link:focus .overlay {
   -webkit-transform: translateY(0);
           transform: translateY(0);
 }
@@ -1599,8 +1620,8 @@ color: var(--accent-color);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.products-link:hover,
-.products-link:focus {
+.products__link:hover,
+.products__link:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -1631,7 +1652,6 @@ color: var(--accent-color);
 }
 
 .products-text {
-  padding: 20px 24px;
   border: 1px solid #EEEEEE;
 }
 
