--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -1,17 +1,18 @@
-.logo{
-  color:#000000;
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
-  text-decoration: none;
-}
-.logo__accent{
-  color: #2196F3;
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
-}
+// .logo{
+//   display: block;
+//   color:#000000;
+//   font-family: 'Raleway';
+//   font-style: normal;
+//   font-weight: 700;
+//   font-size: 26px;
+//   line-height: 1.2;
+//   text-decoration: none;
+// }
+// .logo__accent{
+//   color: #2196F3;
+//   font-family: 'Raleway';
+//   font-style: normal;
+//   font-weight: 700;
+//   font-size: 26px;
+//   line-height: 1.2;
+// }
