--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -1,50 +1,70 @@
-.nav{
 
-  display: none;
+// .logo{
+//   display: block;
+//   color:#000000;
+//   font-family: 'Raleway';
+//   font-style: normal;
+//   font-weight: 700;
+//   font-size: 26px;
+//   line-height: 1.2;
+//   text-decoration: none;
+// }
+// .logo__accent{
+//   color: #2196F3;
+//   font-family: 'Raleway';
+//   font-style: normal;
+//   font-weight: 700;
+//   font-size: 26px;
+//   line-height: 1.2;
+// }
 
-  @media screen and(min-width: 768px) {
-      display: block;
-      display: flex;
-      align-items: center;
-    }
+// .nav{
+
+//   display: none;
+
+//   @media screen and(min-width: 768px) {
+//       display: block;
+//       display: flex;
+//       align-items: center;
+//     }
 
  
 
-  &__list{
-    display: flex;
-    margin-left: 93px;
-    @extend .list;
-  }
-  &__list &__item + &__item{
-    margin-left: 50px;
-  }
-  &__list &__link{
-    display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
-    color: var(--title-text-color);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.2;
-    text-decoration: none;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  &__list &__link:hover, 
-  &__list &__link:focus{
-    color: var(--accent-color);
-  }
-  &__item .current{
-    position: relative;
-  color: var(--accent-color);
-  }
-  &__item .current::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: var(--accent-color);
-  } 
-}
+//   &__list{
+//     display: flex;
+//     margin-left: 93px;
+//     @extend .list;
+//   }
+//   &__list &__item + &__item{
+//     margin-left: 50px;
+//   }
+//   &__list &__link{
+//     display: block;
+//     padding-top: 32px;
+//     padding-bottom: 32px;
+//     color: var(--title-text-color);
+//     font-weight: 500;
+//     font-size: 14px;
+//     line-height: 1.2;
+//     text-decoration: none;
+//     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   }
+//   &__list &__link:hover, 
+//   &__list &__link:focus{
+//     color: var(--accent-color);
+//   }
+//   &__item .current{
+//     position: relative;
+//   color: var(--accent-color);
+//   }
+//   &__item .current::after {
+//     content: '';
+//     position: absolute;
+//     left: 0;
+//     bottom: 0;
+//     width: 100%;
+//     height: 4px;
+//     border-radius: 2px;
+//     background-color: var(--accent-color);
+//   } 
+// }
