--- a/scss/components/_portfolio.scss
+++ b/scss/components/_portfolio.scss
@@ -1,22 +1,32 @@
-.section{
-  margin: 94px 0;
+.section__portfolio{
+padding-top: 60px;
+margin-bottom: 40px;
+  // margin: 94px 0;
 }
 
 
-.imput{
-  display: block;
-  justify-content: center;
-  margin-bottom: 50px;
+.button__list{
+  @extend .list;
+  display: flex;
+  flex-wrap: wrap;
+  width: 391px;
+  gap: 8px;
+ 
+  margin-bottom: 40px;
+  @media screen and(min-width: 768px){
+ justify-content: center;
+ width: 100%;
+  }
 }
 
-.item-works{
+.item__works{
   margin-right: 8px;
 }
-.item-works:last-child{
+.item__works:last-child{
   margin-right: 0;
 }
 
-.button-works{
+.button__works{
 display: inline-block;
 padding: 6px 25px;
 color: var(--title-text-color);
@@ -53,28 +63,45 @@ min-width: 103px;
 min-width: 130px;
 }
 
-.button-works:hover,
-.button-works:focus{
+.button__works:hover,
+.button__works:focus{
   color: var(--background-color);
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.imgs{
-  display: flex;
-  flex-wrap: wrap;
+
+
+.products__list{
+  @extend .list;
+  margin-left: auto;
+  margin-right: auto;
+
+  @media screen and(min-width: 768px){
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+//  justify-content: center;
+
+}
 }
 
-.products{
-  display: flex;
-  flex-wrap: wrap;
-  gap: 30px;
-
+.products__item{
+  @media screen and(min-width: 768px){
+    width: 354px;
+  }
 }
+
+.products__img{
+
+width: 450px;
+}
+
 /* =====Overlay====== */
 
 
-.products-overl{
+.products__overl{
+
   position: relative;
   overflow: hidden;
 }
@@ -83,6 +110,9 @@ min-width: 130px;
   position: absolute;
   top: 0;
   left: 0;
+  // margin-left: auto;
+  // margin-right: auto;
+  // width: 450px;
 
   transform: translateY(100%);
 
@@ -99,8 +129,8 @@ min-width: 130px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.products-link:hover .overlay,
-.products-link:focus .overlay {
+.products__link:hover .overlay,
+.products__link:focus .overlay {
   transform: translateY(0);
 }
 
@@ -116,13 +146,15 @@ color: #FFFFFF;
 }
 
 .products-link{
+
+  @extend .linka;
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
-.products-link:hover,
-.products-link:focus {
+.products__link:hover,
+.products__link:focus {
 
 box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -153,6 +185,6 @@ line-height: 1.9;
 }
 
 .products-text{
-padding: 20px 24px;
+// padding: 20px 24px;
 border: 1px solid #EEEEEE ;
 }
