--- a/scss/components/_reset.scss
+++ b/scss/components/_reset.scss
@@ -11,6 +11,8 @@ img {
     display: block;
     max-width: 100%;
     height: auto;
+  //   margin-left: auto;
+  //  margin-right: auto;
 }
 .list{
   padding: 0;
