--- a/scss/components/_taem.scss
+++ b/scss/components/_taem.scss
@@ -29,29 +29,35 @@ text-align: center;
 .team__list{
 
   @extend .list;
-    margin-left: auto;
-    margin-right: auto;
-    width: 450px;
+    // margin-left: auto;
+    // margin-right: auto;
+    // width: 450px;
     
 
     @media screen and (min-width: 768px) {
-      width: 354px;
+      // width: 354px;
     display: flex;
     flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
+      // justify-content: center;
+      // align-items: center;
       gap: 30px;
-      flex-basis: calc((100% - 30px * 2) / 3);
+      // flex-basis: calc((100% - 30px * 2) / 3);
     }
-    @media screen and (min-width: 1200px) {
-    width: 270px;
-    }
+   
 
     // display: flex;
     
 }
 
 .team__item{
+  width: 450px;
+
+  @media screen and (min-width: 768px){
+    width: 354px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+    }
 margin-bottom: 30px;
 // margin-right: 30px;
 background: #FFFFFF;
