--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -40,11 +40,11 @@
       padding: 200px 0;
 
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../images/hero/img_lg-@1x.jpg);
+        url(../images/hero/img_big-@1x.jpg);
     
       @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-          url(../images/hero/img_lg-@1x.jpg);
+          url(../images/hero/img_big-@2x.jpg);
       }
   }
   
